Add in class code

--- a/warmup.html
+++ b/warmup.html
@@ -22,6 +22,6 @@
 	</svg>
 
 	<!-- Add some text content (like a <p>) below the face that says "Peek-a-Boo!" -->
-
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, in eligendi deleniti commodi, ipsa deserunt odit incidunt culpa eum? Maxime totam, reprehenderit laboriosam ipsa inventore mollitia et ducimus necessitatibus laudantium!</p>
 </body>
 </html>
